<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph.xml"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.capstonesportapprevoke.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_detailActivity"
            app:destination="@id/detailActivity" />
        <action
            android:id="@+id/action_homeFragment_to_newFeatureFragment"
            app:destination="@id/newFeatureFragment" />
    </fragment>
    <fragment
        android:id="@+id/favoriteFragment"
        android:name="com.example.capstonesportapprevoke.favorite.FavoriteFragment"
        android:label="@string/favorite_fragment_label"
        tools:layout="@layout/fragment_favorite" >
        <action
            android:id="@+id/action_favoriteFragment_to_detailActivity"
            app:destination="@id/detailActivity" />
    </fragment>
    <activity
        android:id="@+id/detailActivity"
        android:name="com.example.capstonesportapprevoke.detail.DetailActivity"
        android:label="activity_detail"
        tools:layout="@layout/activity_detail" >
        <argument
            android:name="teamData"
            app:argType="com.example.capstonesportapprevoke.core.domain.model.Team" />
    </activity>
    <fragment
        android:id="@+id/newFeatureFragment"
        android:name="com.example.capstonesportapprevoke.newFeature.NewFeatureFragment"
        android:label="@string/new_feature_fragment_label"
        tools:layout="@layout/fragment_new_feature" >
    </fragment>
</navigation>